--- a/mta.yaml
+++ b/mta.yaml
@@ -3,152 +3,176 @@ ID: cpapp
 description: A simple CAP project.
 version: 1.0.0
 modules:
-- name: cpapp-srv
-  type: nodejs
-  path: gen/srv
-  requires:
-  - name: cpapp-db
-  - name: cpapp-uaa
-  - name: cpapp-logs
-  - name: cpapp-destination
-  provides:
-  - name: srv-api
-    properties:
-      srv-url: ${default-url}
-  parameters:
-    buildpack: nodejs_buildpack
-- name: cpapp-db-deployer
-  type: hdb
-  path: gen/db
-  requires:
-  - name: cpapp-db
-  - name: cpapp-uaa
-  - name: cpapp-logs
-  parameters:
-    buildpack: nodejs_buildpack
-- name: cpapp
-  type: approuter.nodejs
-  path: app/approuter
-  requires:
-  - name: cpapp-html5-repo-runtime
-  - name: srv-api
-    group: destinations
-    properties:
-      forwardAuthToken: true
-      name: srv-api
-      url: ~{srv-url}
-  - name: cpapp-destination
-    group: destinations
-    properties:
-      forwardAuthToken: false
-      name: ui5
-      url: https://ui5.sap.com
-  - name: cpapp-uaa
-  parameters:
-    disk-quota: 256M
-    memory: 256M
-- name: cpapp-app-content
-  type: com.sap.application.content
-  path: .
-  requires:
-  - name: cpapp-html5-repo-host
-    parameters:
-      content-target: true
-  build-parameters:
-    build-result: resources
+  - name: cpapp-srv
+    type: nodejs
+    path: gen/srv
     requires:
-    - artifacts:
-      - nsrisks.zip
-      name: nsrisks
-      target-path: resources/
-    - artifacts:
-      - nsmitigations.zip
-      name: nsmitigations
-      target-path: resources/
-- name: nsrisks
-  type: html5
-  path: app/risks
-  build-parameters:
-    build-result: dist
-    builder: custom
-    commands:
-    - npm install
-    - npm run build:cf
-    supported-platforms: []
-- name: nsmitigations
-  type: html5
-  path: app/mitigations
-  build-parameters:
-    build-result: dist
-    builder: custom
-    commands:
-    - npm install
-    - npm run build:cf
-    supported-platforms: []
+      - name: cpapp-uaa
+      - name: cpapp-logs
+      - name: cpapp-destination
+      - name: cpapp-registry
+      - name: cpapp-db
+      - name: app-api
+        properties:
+          APP_PROTOCOL: ~{app-protocol}
+          APP_URI: ~{app-uri}
+    provides:
+      - name: srv-api
+        properties:
+          srv-url: ${default-url}
+      - name: mtx-api # potentially required by approuter
+        properties:
+          mtx-url: ${default-url}
+    parameters:
+      buildpack: nodejs_buildpack
+  - name: cpapp
+    type: approuter.nodejs
+    path: app/approuter
+    requires:
+      - name: cpapp-html5-repo-runtime
+      - name: srv-api
+        group: destinations
+        properties:
+          forwardAuthToken: true
+          name: srv-api
+          url: ~{srv-url}
+      - name: cpapp-destination
+        group: destinations
+        properties:
+          forwardAuthToken: false
+          name: ui5
+          url: https://ui5.sap.com
+      - name: cpapp-uaa
+    parameters:
+      disk-quota: 256M
+      memory: 256M
+      keep-existing-routes: true
+    properties:
+      TENANT_HOST_PATTERN: '^(.*)-${default-uri}'
+    provides:
+      - name: app-api
+        properties:
+          app-protocol: ${protocol}
+          app-uri: ${default-uri}
+  - name: cpapp-app-content
+    type: com.sap.application.content
+    path: .
+    requires:
+      - name: cpapp-html5-repo-host
+        parameters:
+          content-target: true
+    build-parameters:
+      build-result: resources
+      requires:
+        - artifacts:
+            - nsrisks.zip
+          name: nsrisks
+          target-path: resources/
+        - artifacts:
+            - nsmitigations.zip
+          name: nsmitigations
+          target-path: resources/
+  - name: nsrisks
+    type: html5
+    path: app/risks
+    build-parameters:
+      build-result: dist
+      builder: custom
+      commands:
+        - npm install
+        - npm run build:cf
+      supported-platforms: []
+  - name: nsmitigations
+    type: html5
+    path: app/mitigations
+    build-parameters:
+      build-result: dist
+      builder: custom
+      commands:
+        - npm install
+        - npm run build:cf
+      supported-platforms: []
 resources:
-- name: cpapp-db
-  type: com.sap.xs.hdi-container
-  parameters:
-    service: hana
-    service-plan: hdi-shared
-  properties:
-    hdi-service-name: ${service-name}
-- name: cpapp-uaa
-  type: org.cloudfoundry.managed-service
-  parameters:
-    config:
-      role-collections:
-      - description: Manage Risks
-        name: RiskManager-${space}
-        role-template-references:
-        - $XSAPPNAME.RiskManager
-      - description: View Risks
-        name: RiskViewer-${space}
-        role-template-references:
-        - $XSAPPNAME.RiskViewer
-      tenant-mode: dedicated
-      xsappname: cpapp-${space}
-    path: ./xs-security.json
-    service: xsuaa
-    service-plan: application
-- name: cpapp-destination
-  type: org.cloudfoundry.managed-service
-  parameters:
-    config:
-      HTML5Runtime_enabled: true
-      init_data:
-        instance:
-          destinations:
-          - Authentication: NoAuthentication
-            Name: ui5
-            ProxyType: Internet
-            Type: HTTP
-            URL: https://ui5.sap.com
-          existing_destinations_policy: update
-      version: 1.0.0
-    service: destination
-    service-plan: lite
-- name: cpapp-html5-repo-host
-  type: org.cloudfoundry.managed-service
-  parameters:
-    service: html5-apps-repo
-    service-plan: app-host
-- name: cpapp-html5-repo-runtime
-  type: org.cloudfoundry.managed-service
-  parameters:
-    service: html5-apps-repo
-    service-plan: app-runtime
-- name: cpapp-logs
-  type: org.cloudfoundry.managed-service
-  parameters:
-    service: application-logs
-    service-plan: lite
+  - name: cpapp-uaa
+    type: org.cloudfoundry.managed-service
+    parameters:
+      config:
+        role-collections:
+          - description: Manage Risks
+            name: RiskManager-${space}
+            role-template-references:
+              - $XSAPPNAME.RiskManager
+          - description: View Risks
+            name: RiskViewer-${space}
+            role-template-references:
+              - $XSAPPNAME.RiskViewer
+        tenant-mode: shared
+        xsappname: cpapp-${org}-${space}
+      path: ./xs-security.json
+      service: xsuaa
+      service-plan: application
+  - name: cpapp-destination
+    type: org.cloudfoundry.managed-service
+    parameters:
+      config:
+        HTML5Runtime_enabled: true
+        init_data:
+          instance:
+            destinations:
+              - Authentication: NoAuthentication
+                Name: ui5
+                ProxyType: Internet
+                Type: HTTP
+                URL: https://ui5.sap.com
+            existing_destinations_policy: update
+        version: 1.0.0
+      service: destination
+      service-plan: lite
+  - name: cpapp-html5-repo-host
+    type: org.cloudfoundry.managed-service
+    parameters:
+      service: html5-apps-repo
+      service-plan: app-host
+  - name: cpapp-html5-repo-runtime
+    type: org.cloudfoundry.managed-service
+    parameters:
+      service: html5-apps-repo
+      service-plan: app-runtime
+  - name: cpapp-logs
+    type: org.cloudfoundry.managed-service
+    parameters:
+      service: application-logs
+      service-plan: lite
+  - name: cpapp-registry
+    type: org.cloudfoundry.managed-service
+    requires:
+      - name: mtx-api
+    parameters:
+      service: saas-registry
+      service-plan: application
+      config:
+        xsappname: cpapp-${org}-${space}
+        appName: cpapp-${org}-${space}
+        displayName: cpapp
+        description: A simple CAP project.
+        category: 'CAP Saas Application'
+        appUrls:
+          getDependencies: ~{mtx-api/mtx-url}/-/cds/saas-provisioning/dependencies
+          onSubscription: ~{mtx-api/mtx-url}/-/cds/saas-provisioning/tenant/{tenantId}
+          onSubscriptionAsync: false
+          onUnSubscriptionAsync: false
+          callbackTimeoutMillis: 300000
+  - name: cpapp-db
+    type: org.cloudfoundry.managed-service
+    parameters:
+      service: service-manager
+      service-plan: container
 parameters:
   deploy_mode: html5-repo
   enable-parallel-deployments: true
 build-parameters:
   before-all:
-  - builder: custom
-    commands:
-    - npm install --production
-    - npx -p @sap/cds-dk cds build --production
+    - builder: custom
+      commands:
+        - npm install --production
+        - npx -p @sap/cds-dk cds build --production
